--- a/grid.css
+++ b/grid.css
@@ -2,16 +2,217 @@ body{
     box-sizing: border-box;
 }
 
-.container{
-    border:5px solid;
-    background-color: white;
-    /* width: 600px;
-    height:400px; */
-    align-items: center;
+section{
+    width: auto;
+    height: auto;
+    border:5px solid black;
+    padding:5px;
     display:grid;
-    grid-template-columns: 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20%;
-    grid-template-rows: 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20% 20%;
+    background-color: black;
+    grid-template-columns: repeat(13, 1fr);
+    grid-template-rows:50px repeat(5,60px);
+    grid-gap:5px;
     
-
 }
 
+/* besoin de noté les couleurs ??
+
+noir{
+    background-color: black; 
+}
+
+bleu{
+    border-color: blue;
+}
+
+rouge{
+    border-color: red;
+}
+
+jaune{
+    background-color: yellow;
+}
+
+blanc{
+    background-color: white;
+} */
+
+#cell1{
+    grid-column:0/3;
+    grid-row:1/3 ;
+    background-color:white;
+}
+
+#cell2{
+   grid-column: 2/5;
+   grid-row: 0/2;
+    background-color:white;
+}
+
+#cell3{
+    grid-column:7/10;
+    grid-row: 1/2;
+    background-color: white ;
+}
+
+#cell4{
+    grid-column:span 5;
+    grid-row: 1/4 ;
+    background-color: white;
+}
+#cell5{
+    grid-column:span 10;
+    grid-row: 1/4;
+    background-color: yellow;
+}
+#cell6{
+    grid-column:2/7;
+    grid-row:2/3 ;
+    background-color: blue;
+}
+#cell7{
+    grid-column:7/9;
+    grid-row:2/3;
+    background-color: white;
+}
+#cell8{
+    grid-column:9/12;
+    grid-row: 2/3 ;
+    background-color:blue;
+}
+#cell9{
+    
+    grid-column:span 1;
+    grid-row:3/5;
+    
+}
+#cell10{
+    grid-column:2/3;
+    grid-row:3/5 ;
+    background-color:white ;
+}
+#cell11{
+    grid-column: span 1;
+    grid-row:3/8 ;
+    
+}
+#cell12{
+    grid-column:4/7;
+    grid-row:1/4 ;
+    background-color:white;
+}
+#cell13{
+    grid-column:6/8 ;
+    grid-row:3/4;
+    background-color:white ;
+}
+#cell14{
+    grid-column: 7/10;
+    grid-row: 3/4;
+    background-color: yellow;
+}
+#cell15{
+    grid-column:10/12;
+    grid-row:3/5;
+    background-color:red;
+}
+
+#cell16{
+    grid-column:10/12 ;
+    grid-row: 2/4;
+    background-color:red ;
+}
+#cell17{
+    grid-column: 4/6;
+    grid-row: 4/6;
+    background-color: yellow;
+}
+#cell18{
+    grid-column:5/7 ;
+    grid-row: 4/5;
+    background-color:red ;
+}
+
+#cell19{
+    grid-column: 7/9;
+    grid-row:4/5 ;
+    background-color: blue;
+}
+
+#cell20{
+    grid-column:9/10;
+    grid-row: 4/5;
+    background-color:white;
+}
+#cell21{
+    grid-column:10/12 ;
+    grid-row:4/5;
+    background-color: white ;
+}
+#cell22{
+    grid-column:12/14 ;
+    grid-row: 4/5;
+  
+}
+#cell23{
+    grid-column:1/2 ;
+    grid-row: 4/7;
+    background-color: white;
+}
+#cell24{
+    grid-column: 2/3;
+    grid-row: 5/7;
+    background-color: red;
+}
+#cell25{
+    
+    grid-column:4/5 ;
+    grid-row: 4/10;
+    background-color:yellow ;
+}
+#cell26{
+    grid-column: 5/8;
+    grid-row: 5/6;
+    background-color: white;
+}
+#cell27{
+    grid-column:8/10 ;
+    grid-row:5/6 ;
+    background-color:white;
+}
+#cell28{
+    grid-column:10/11 ;
+    grid-row:5/6 ;
+    background-color:blue;
+}
+#cell29{
+    grid-column:11/12 ;
+    grid-row: 5/6;
+    background-color: yellow;
+}
+#cell30{
+    grid-column:12/14 ;
+    grid-row: 5/6;
+    background-color:white;
+}
+#cell31{
+    grid-column:1/4 ;
+    grid-row:7/8 ;
+    background-color:white;
+}
+
+#cell32{
+    grid-column:5/7 ;
+    grid-row: 6/8;
+    background-color:red;
+}
+#cell33{
+    grid-column:7/10 ;
+    grid-row: 6/8;
+   
+}
+#cell34{
+    grid-column:10/13 ;
+    grid-row:6/9 ;
+    background-color: white;
+}
