--- a/grid.css
+++ b/grid.css
@@ -6,12 +6,12 @@ section{
     width: auto;
     height: auto;
     border:5px solid black;
-    padding:5px;
+    /* padding:5px; */
     display:grid;
     background-color: black;
     grid-template-columns: repeat(13, 1fr);
     grid-template-rows:50px repeat(5,60px);
-    grid-gap:5px;
+    grid-gap:10px;
     
 }
 
@@ -38,36 +38,36 @@ blanc{
 } */
 
 #cell1{
-    grid-column:0/3;
+    grid-column:1/2;
     grid-row:1/3 ;
     background-color:white;
 }
 
 #cell2{
-   grid-column: 2/5;
-   grid-row: 0/2;
+   grid-column: 2/8;
+   grid-row: 0/4;
     background-color:white;
 }
 
 #cell3{
-    grid-column:7/10;
-    grid-row: 1/2;
+    grid-column:8/11;
+    grid-row: 0/2;
     background-color: white ;
 }
 
 #cell4{
-    grid-column:span 5;
-    grid-row: 1/4 ;
+    grid-column:12/13;
+    grid-row: 1/4;
     background-color: white;
 }
 #cell5{
-    grid-column:span 10;
+    grid-column:13/14;
     grid-row: 1/4;
     background-color: yellow;
 }
 #cell6{
-    grid-column:2/7;
-    grid-row:2/3 ;
+    grid-column:2/8;
+    grid-row:2/3;
     background-color: blue;
 }
 #cell7{
@@ -82,7 +82,7 @@ blanc{
 }
 #cell9{
     
-    grid-column:span 1;
+    grid-column:1/2;
     grid-row:3/5;
     
 }
@@ -92,39 +92,39 @@ blanc{
     background-color:white ;
 }
 #cell11{
-    grid-column: span 1;
-    grid-row:3/8 ;
+    grid-column: 3/4;
+    grid-row:3/7 ;
     
 }
 #cell12{
-    grid-column:4/7;
-    grid-row:1/4 ;
+    grid-column:4/6;
+    grid-row:3/4 ;
     background-color:white;
 }
 #cell13{
-    grid-column:6/8 ;
+    grid-column:6/7 ;
     grid-row:3/4;
     background-color:white ;
 }
 #cell14{
-    grid-column: 7/10;
+    grid-column: 7/9;
     grid-row: 3/4;
     background-color: yellow;
 }
 #cell15{
-    grid-column:10/12;
-    grid-row:3/5;
+    grid-column:9/11;
+    grid-row:3/4;
     background-color:red;
 }
 
 #cell16{
-    grid-column:10/12 ;
-    grid-row: 2/4;
+    grid-column:11/12 ;
+    grid-row: 3/4;
     background-color:red ;
 }
 #cell17{
-    grid-column: 4/6;
-    grid-row: 4/6;
+    grid-column: 4/5;
+    grid-row: 4/5;
     background-color: yellow;
 }
 #cell18{
@@ -135,39 +135,39 @@ blanc{
 
 #cell19{
     grid-column: 7/9;
-    grid-row:4/5 ;
+    grid-row:4/5;
     background-color: blue;
 }
 
 #cell20{
-    grid-column:9/10;
+    grid-column:9/11;
     grid-row: 4/5;
     background-color:white;
 }
 #cell21{
-    grid-column:10/12 ;
+    grid-column:11/12 ;
     grid-row:4/5;
     background-color: white ;
 }
 #cell22{
-    grid-column:12/14 ;
+    grid-column:12/14;
     grid-row: 4/5;
   
 }
 #cell23{
     grid-column:1/2 ;
-    grid-row: 4/7;
+    grid-row: 5/7;
     background-color: white;
 }
 #cell24{
     grid-column: 2/3;
-    grid-row: 5/7;
+    grid-row: 5/8;
     background-color: red;
 }
 #cell25{
     
-    grid-column:4/5 ;
-    grid-row: 4/10;
+    grid-column:4/5;
+    grid-row: 4/9;
     background-color:yellow ;
 }
 #cell26{
@@ -182,11 +182,11 @@ blanc{
 }
 #cell28{
     grid-column:10/11 ;
-    grid-row:5/6 ;
+    grid-row:5/7;
     background-color:blue;
 }
 #cell29{
-    grid-column:11/12 ;
+    grid-column:11/12;
     grid-row: 5/6;
     background-color: yellow;
 }
@@ -197,12 +197,12 @@ blanc{
 }
 #cell31{
     grid-column:1/4 ;
-    grid-row:7/8 ;
+    grid-row:7/8;
     background-color:white;
 }
 
 #cell32{
-    grid-column:5/7 ;
+    grid-column:5/7;
     grid-row: 6/8;
     background-color:red;
 }
@@ -212,7 +212,7 @@ blanc{
    
 }
 #cell34{
-    grid-column:10/13 ;
-    grid-row:6/9 ;
+    grid-column:10/14 ;
+    grid-row:6/8 ;
     background-color: white;
 }
